shoppingcart/shoppingcart-k8/shoppingcart-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: shoppingcartms-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      name: shoppingcartms
      zone: prod
      app: shoppingcartms
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: shoppingcartms
        version: v1
        release: stable
        tier: be
        zone: prod
        managed-by: m2
        app: shoppingcartms
    spec:
      containers:
        - name: shoppingcartms-ctr
          image: metamagicglobal/shoppingcartservice_k8
          imagePullPolicy: Always
          ports:
          - containerPort: 8082
