shoppingcart/shoppingcart-k8/shoppingcart-ms-dep.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: shoppingcartms-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      zone: prod
      app: shoppingcartms
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        version: "1.0.0"
        release: stable
        tier: be
        zone: prod
        managed-by: m2
        app: shoppingcartms
    spec:
      containers:
        - name: shoppingcartms-ctr
          image: metamagicglobal/shoppingcartservice_k8
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8082
