shoppingcart/shoppingcart-k8/shoppingcartui_dep.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: shoppingcartui-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      zone: prod
      app: shoppingcartui
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        version: "1.0.0"
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
        app: shoppingcartui
    spec:
      containers:
        - name: shoppingcartui-ctr
          image: metamagicglobal/shoppingcartui:k8 
          imagePullPolicy: Always
          ports:
          - containerPort: 80
