shoppingcart/shoppingcart-k8/shoppingcart-ms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoppingcart-svc
  namespace: shoppingportal
spec:
  selector: 
    app: shoppingcartms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
