shoppingcart/shoppingcart-k8/shoppingcart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoppingcart-svc
  namespace: shoppingportal
spec:
  type: LoadBalancer
  selector: 
    name: shoppingcartms
    app: shoppingcartms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
