shoppingcart/shoppingcart-k8/shoppingcart-destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shoppingcart-destination-rules
  namespace: shoppingportal    
spec:
  host: shoppingcart-svc.shoppingportal.svc.cluster.local
  subsets:
  - name: stable
    labels:
      version: v1
